# textok

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
python/: CMakeLists.txt
python/csrc/: python.cpp
python/prj/: x.py
tests/: test_a.py
tests/cpp/: CMakeLists.txt  test_b.cpp
