[build-system]
requires = [
    "build",
    "setuptools >= 42",
    "wheel",
    "ninja",
    "cmake >= 3.15",
    "nanobind >= 1.9.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "prj"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3.8',
]
keywords = [
    'Deep Learning',
    'Artificial Intelligence',
]
requires-python = ">= 3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jiauzhang/prj"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.dynamic]
version = {attr = "prj.__version__"}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = ["tests/cpp"]
